--- a/kids-story.html
+++ b/kids-story.html
@@ -11,4 +11,4 @@
 
 
 //edit kids-story.html 
-There was once a miser. He melted all his money into a block of gold and buried it in a pit. Every day he would dig it up and smile to see it. 
+Once upon a time There was once a miser. He melted all his money into a block of gold and buried it in a pit. Every day he would dig it up and smile to see it. 
